	PR c/18282 	* c-common.c (handle_mode_attribute): Allow mode attribute 	on enums when the mode is integral.

* gcc.c-torture/compile/20041102-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-rhl-branch@91247 138bc75d-0d04-0410-961f-82ee72b054a4